struckdown/tests/snapshots/test_snapshots__parser@ext_html_sanitizer.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: events
input_file: struckdown/tests/inputs/ext_html_sanitizer.md
---
- type: document_start
  front_matter:
    processors:
      - processor: html_sanitizer
        allow_class: true
        allow_style: true
  location:
    offset: 0
    len: 95
    line: 1
    column: 0
- type: start_tag
  tag: heading1
  location:
    offset: 0
    len: 15
    line: 1
    column: 0
- type: text
  text: Hello World!
  location:
    offset: 2
    len: 12
    line: 1
    column: 2
- type: end_tag
  tag: heading1
  location:
    offset: 0
    len: 15
    line: 1
    column: 0
- type: raw_html
  html: "<div class=\"hello\">\n"
  location:
    offset: 16
    len: 20
    line: 3
    column: 0
- type: start_tag
  tag: paragraph
  location:
    offset: 37
    len: 24
    line: 5
    column: 0
- type: start_tag
  tag: emphasis
  location:
    offset: 37
    len: 23
    line: 5
    column: 0
- type: text
  text: Here is some Markdown
  location:
    offset: 38
    len: 21
    line: 5
    column: 1
- type: end_tag
  tag: emphasis
  location:
    offset: 37
    len: 23
    line: 5
    column: 0
- type: end_tag
  tag: paragraph
  location:
    offset: 37
    len: 24
    line: 5
    column: 0
- type: raw_html
  html: "</div>\n"
  location:
    offset: 62
    len: 7
    line: 7
    column: 0
- type: raw_html
  html: "<style>\n"
  location:
    offset: 70
    len: 8
    line: 9
    column: 0
- type: raw_html
  html: "  background: blue\n"
  location:
    offset: 78
    len: 19
    line: 10
    column: 0
- type: raw_html
  html: "</style>\n"
  location:
    offset: 97
    len: 9
    line: 11
    column: 0
- type: raw_html
  html: "<div style=\"background: red\">\n"
  location:
    offset: 106
    len: 30
    line: 12
    column: 0
- type: raw_html
  html: "  <p>This shit is safe.\n"
  location:
    offset: 136
    len: 24
    line: 13
    column: 0
- type: raw_html
  html: "  \n"
  location:
    offset: 160
    len: 49
    line: 14
    column: 0
- type: raw_html
  html: "</p></div>\n"
  location:
    offset: 209
    len: 7
    line: 15
    column: 0
- type: start_tag
  tag: paragraph
  location:
    offset: 217
    len: 16
    line: 17
    column: 0
- type: text
  text: More stuff here.
  location:
    offset: 217
    len: 16
    line: 17
    column: 0
- type: end_tag
  tag: paragraph
  location:
    offset: 217
    len: 16
    line: 17
    column: 0
