struckdown/tests/snapshots/test_snapshots__parser@footnotes.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: events
input_file: struckdown/tests/inputs/footnotes.md
---
- type: document_start
- type: start_tag
  tag: paragraph
  location:
    offset: 0
    len: 41
    line: 1
    column: 0
- type: text
  text: This is text with
  location:
    offset: 0
    len: 17
    line: 1
    column: 0
- type: footnote_reference
  target: footnote
  location:
    offset: 17
    len: 11
    line: 1
    column: 17
- type: text
  text: " a footnote."
  location:
    offset: 28
    len: 12
    line: 1
    column: 28
- type: end_tag
  tag: paragraph
  location:
    offset: 0
    len: 41
    line: 1
    column: 0
- type: start_tag
  tag: footnote_definition
  attrs:
    id: footnote
  location:
    offset: 42
    len: 35
    line: 3
    column: 0
- type: start_tag
  tag: paragraph
  location:
    offset: 55
    len: 22
    line: 3
    column: 13
- type: text
  text: This is the footnote.
  location:
    offset: 55
    len: 21
    line: 3
    column: 13
- type: end_tag
  tag: paragraph
  location:
    offset: 55
    len: 22
    line: 3
    column: 13
- type: end_tag
  tag: footnote_definition
  location:
    offset: 42
    len: 35
    line: 3
    column: 0
